--- a/demo/index.html
+++ b/demo/index.html
@@ -56,7 +56,7 @@ and open the template in the editor.
 					connect();
 
 					function connect() {
-						var wsUri = "ws://localhost:8080/chat";
+						var wsUri = "ws://localhost:8080";
 						websocket = new WebSocket(wsUri);
 
 						//Connected to server
